VOltando a logica do token para como era antes